<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <io.codelabs.widget.ForegroundLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/container"
        android:focusableInTouchMode="true"
        tools:context=".view.LoginActivity">

        <io.codelabs.widget.ForegroundImageView
            android:layout_width="@dimen/large_avatar_size"
            android:layout_height="@dimen/large_avatar_size"
            android:src="@drawable/shr_logo" />

        <io.codelabs.widget.BaselineGridTextView
            android:layout_width="wrap_content"
            android:text="@string/home_tutor_name"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_large"
            android:textAppearance="@style/TextAppearance.HomeTutorAppTheme.LargeTitle"
            android:layout_height="wrap_content" />

        <io.codelabs.widget.BaselineGridTextView
            android:layout_width="wrap_content"
            android:text="@string/home_tutor_desc"
            android:textAppearance="@style/TextAppearance.HomeTutorAppTheme.SmallTitle"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/loading"
            layout="@layout/loading" />


        <io.codelabs.widget.ForegroundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_large"
            android:id="@+id/content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:hint="@string/email_address"
                style="@style/HomeTutorAppTheme.TextInputTheme"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email"
                    android:drawableStart="@drawable/twotone_mail_outline_24px"
                    android:drawablePadding="@dimen/padding_normal"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_large"
                android:hint="@string/password"
                app:passwordToggleDrawable="@drawable/asl_password_visibility"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/spacing_normal"
                style="@style/HomeTutorAppTheme.TextInputTheme"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:drawableStart="@drawable/twotone_vpn_key_24px"
                    android:drawablePadding="@dimen/padding_normal"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HomeTutorAppTheme.Button"
                android:id="@+id/login_button"
                android:onClick="loginUser"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/login" />

            <io.codelabs.widget.ForegroundLinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/HomeTutorAppTheme.Button.WithText"
                    android:id="@+id/forgot_password"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:text="@string/forgot_password"
                    android:onClick="resetPassword"
                    android:layout_gravity="start" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/HomeTutorAppTheme.Button.WithText"
                    android:textColor="@color/text_primary_dark"
                    android:id="@+id/create_account"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:text="@string/create_new_account"
                    android:onClick="createNewAccount"
                    android:layout_gravity="end" />

            </io.codelabs.widget.ForegroundLinearLayout>

        </io.codelabs.widget.ForegroundLinearLayout>


    </io.codelabs.widget.ForegroundLinearLayout>
</layout>
