<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.text.TextUtils"/>
        <import type="android.view.View"/>
        <variable name="fileUrl" type="String"/>
        <variable name="showList" type="Boolean"/>
    </data>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:focusableInTouchMode="true"
                 tools:context=".view.kotlin.AssignmentActivity"
                 android:id="@+id/container">

        <io.codelabs.widget.ForegroundLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                    style="?appBarLayoutStyle"
                    android:layout_width="match_parent"
                    android:id="@+id/app_bar"
                    android:layout_height="@dimen/shot_collapsed_app_bar_height">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_scrollFlags="exitUntilCollapsed|scroll"
                        app:title="@string/add_assignment"
                        app:contentScrim="@color/scrim"
                        android:id="@+id/collapsing_toolbar"
                        app:toolbarId="@id/toolbar">

                    <androidx.appcompat.widget.Toolbar
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="pin"
                            app:navigationIcon="@drawable/ic_back_light"
                            android:id="@+id/toolbar"/>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <io.codelabs.widget.BaselineGridTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:gravity="center"
                                                     android:text="@string/file_format_assignment"
                                                     android:textAppearance="?textAppearanceBody1"
                                                     android:layout_gravity="center_horizontal"
                                                     android:padding="@dimen/spacing_normal"/>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_marginStart="@dimen/padding_large"
                                                                   android:layout_marginEnd="@dimen/padding_large"
                                                                   android:hint="@string/comments">

                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:layout_height="wrap_content"
                                                                         android:maxLines="2"
                                                                         android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
                                                                         android:drawablePadding="@dimen/padding_normal"
                                                                         android:id="@+id/comments"/>

            </com.google.android.material.textfield.TextInputLayout>

            <io.codelabs.widget.BaselineGridTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:text="@{fileUrl}"
                                                     android:visibility="@{fileUrl != null &amp;&amp; !TextUtils.isEmpty(fileUrl) ? View.VISIBLE : View.GONE, default=gone}"
                                                     android:textColor="?attr/colorSecondary"
                                                     android:layout_gravity="center_horizontal"
                                                     android:padding="@dimen/spacing_normal"/>

            <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/pick_file"
                    android:onClick="pickAssignment"
                    app:icon="@drawable/twotone_insert_drive_file_24px"/>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:visibility="@{showList ? View.VISIBLE : View.GONE}"
                  android:background="@color/divider"
                  android:layout_marginStart="@dimen/padding_normal"
                  android:layout_marginEnd="@dimen/padding_normal"/>

            <io.codelabs.widget.BaselineGridTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:text="@string/select_ward"
                                                     android:visibility="@{showList ? View.VISIBLE : View.GONE}"
                                                     android:layout_marginTop="@dimen/spacing_large"
                                                     android:textAppearance="?textAppearanceBody2"
                                                     android:layout_gravity="center_horizontal"
                                                     android:padding="@dimen/spacing_normal"/>

            <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                                       tools:listitem="@layout/item_user"
                                                       tools:itemCount="20"
                                                       android:visibility="@{showList ? View.VISIBLE : View.GONE}"
                                                       android:scrollbars="none"
                                                       android:id="@+id/wards_grid"/>

        </io.codelabs.widget.ForegroundLinearLayout>

        <!-- Send Button -->
        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/post_assignment"
                android:onClick="sendAssignment"
                android:enabled="@{fileUrl != null &amp;&amp; !TextUtils.isEmpty(fileUrl) ? true : false, default=false}"
                app:icon="@drawable/twotone_assignment_turned_in_24px"/>

    </FrameLayout>
</layout>