<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <io.codelabs.widget.ForegroundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:context=".view.kotlin.MakeComplaintActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:id="@+id/app_bar"
                android:theme="@style/HomeTutorAppTheme.AppBarOverlay"
                android:layout_height="@dimen/shot_collapsed_app_bar_height">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="exitUntilCollapsed|scroll"
                    app:title="@string/make_complaint"
                    app:contentScrim="@color/scrim"
                    android:id="@+id/collapsing_toolbar"
                    app:expandedTitleTextAppearance="@style/TextAppearance.HomeTutorAppTheme.Expanded"
                    app:collapsedTitleTextAppearance="@style/TextAppearance.HomeTutorAppTheme.Collapsed"
                    app:toolbarId="@id/toolbar">

                <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:navigationIcon="@drawable/ic_back_light"
                        app:popupTheme="@style/HomeTutorAppTheme.PopupOverlay"
                        android:id="@+id/toolbar"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <io.codelabs.widget.BaselineGridTextView android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:gravity="center"
                                                 android:text="@string/complaint_desc"
                                                 android:textAppearance="@style/TextAppearance.HomeTutorAppTheme.SmallTitle"
                                                 android:layout_gravity="center_horizontal"
                                                 android:padding="@dimen/padding_normal"/>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                               android:layout_height="wrap_content"
                                                               android:layout_marginStart="@dimen/padding_large"
                                                               android:layout_marginEnd="@dimen/padding_large"
                                                               style="@style/HomeTutorAppTheme.TextInputTheme"
                                                               android:hint="@string/message_hint">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:maxLines="2"
                                                                     android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
                                                                     android:drawablePadding="@dimen/padding_normal"
                                                                     android:id="@+id/complaint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HomeTutorAppTheme.Button.WithText"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_complaint"
                android:onClick="send"
                android:layout_marginTop="@dimen/padding_large"
                app:iconGravity="textEnd"
                app:iconPadding="@dimen/padding_normal"
                app:icon="@drawable/twotone_send_24px"/>


    </io.codelabs.widget.ForegroundLinearLayout>
</layout>